checker/tests/parsing/errors/struct_double_rest.mft
type T {
  f: Base { .., .. };
}
=== error ===
Unrecognized token `,` found at 23:24
Expected one of "}"